<resources>
    <string name="app_name">WristCard</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="glucose_button">Glucose</string>
    <string name="blood_pressure_button">Blood Pressure</string>
    <string name="bpm_button">Heart Rate</string>
    <string name="tab_text">Heart Rate</string>
    <string name="value_mode">Current Value:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="save_button">Save Changes</string>
    <string name="text_name">Name</string>
    <string name="text_email">name@gmail.com</string>
    <string name="variability_text">Variability:</string>
    <string name="current_value">70 BPM</string>
    <string name="variability_value">2.3%</string>
</resources>
