<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/buttonBPM"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cyan_right_white_border"
            android:onClick="switchToBPM"
            android:text="@string/bpm_button" />

        <Button
            android:id="@+id/buttonPressure"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cyan_back"
            android:onClick="switchToPressure"
            android:text="@string/blood_pressure_button" />

        <Button
            android:id="@+id/buttonGlucose"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cyan_white_left_border"
            android:onClick="switchToGlucoseLevel"
            android:text="@string/glucose_button" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_text"
        android:id="@+id/tabText"
        android:textSize="30sp"
        android:layout_below="@+id/toolBarLayout"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/tabText"
        android:layout_marginTop="15dp"
        android:id="@+id/graphOutput"
        android:background="@color/grey"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_mode"
        android:id="@+id/valueText"
        android:textSize="20sp"
        android:layout_below="@+id/tabText"
        android:layout_marginTop="340dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/variabilityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/valueText"
        android:layout_below="@+id/valueText"
        android:layout_marginTop="25dp"
        android:text="@string/variability_text"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/currentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/valueText"
        android:layout_marginStart="200dp"
        android:layout_alignParentStart="true"
        android:text="@string/current_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/variabilityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/variabilityText"
        android:layout_alignBottom="@+id/variabilityText"
        android:layout_alignStart="@+id/currentValue"
        android:text="@string/variability_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp" />

</RelativeLayout>